@@ -3,8 +3,7 @@ package Specio::OO;
 use strict;
 use warnings;
 
-use Carp            qw( confess );
-use Clone::Choose   ();
+use Carp qw( confess );
 use List::Util 1.33 qw( all );
 use MRO::Compat;
 use Role::Tiny;
